# leptos-auth-template-community

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml  deploy.sh  tree_output.txt
crates/app/: Cargo.toml  build.rs
crates/app/locales/de/: account.toml  account_webauthn.toml  admin.toml  header.toml  home.toml  imprint.toml  login.toml  logout.toml  not_found.toml  privacy.toml  protected.toml  routes.toml
crates/app/locales/en/: account.toml  account_webauthn.toml  admin.toml  contact.toml  header.toml  login.toml  logout.toml  protected.toml  routes.toml
crates/app/src/: account.rs  app.rs  auth.rs  auth_state.rs  contexts.rs  csrf.rs  i18n_paths.rs  i18n_utils.rs  lib.rs  main.rs  server.rs  state.rs
crates/app/src/components/: contact_button.rs  footer.rs  header.rs  lang_switch.rs  mod.rs
crates/app/src/features/: account.rs  mod.rs
crates/app/src/features/admin/: api.rs  mod.rs  users_table.rs
crates/app/src/pages/: admin.rs  contact.rs  home.rs  imprint.rs  login.rs  logout.rs  mod.rs  not_found.rs  privacy.rs  protected.rs
crates/app/src/pages/account/: mod.rs  page.rs  password.rs  profile.rs  webauthn.rs
crates/app/src/pages/admin/: api.rs  mod.rs  page.rs  types.rs
crates/app/src/pages/admin/components/: mod.rs  users_table.rs
crates/app/style/: main.scss
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/src/entities/: mod.rs  permissions.rs  prelude.rs  role_permissions.rs  roles.rs  user_roles.rs  users.rs  webauthn_credentials.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260327_070930_create_permissions.rs  m20260327_070930_create_role_permissions.rs  m20260327_070930_create_roles.rs  m20260327_070930_create_user_roles.rs  m20260327_070930_create_users.rs  m20260327_070930_create_webauthn_credentials.rs
docs/: seaorm-wiring.md
locales/: de.toml  en.toml
locales/de/: admin.toml  contact.toml  footer.toml  header.toml  home.toml  login.toml  logout.toml  protected.toml  routes.toml
locales/en/: admin.toml  footer.toml  header.toml  home.toml  imprint.toml  login.toml  logout.toml  not_found.toml  privacy.toml  protected.toml  routes.toml
src/: app.rs  auth.rs  auth_state.rs  csrf.rs  lib.rs  main.rs  server.rs  state.rs
src/components/: contact_button.rs  footer.rs  header.rs  lang_switch.rs
src/pages/: admin.rs  contact.rs  home.rs  imprint.rs  login.rs  logout.rs  mod.rs  privacy.rs  protected.rs  protected_leptos.rs
style/: main.scss
