[workspace]
members = [
  "crates/app",
  "crates/db",
  "crates/migration",
]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.0" }
axum-login = { version = "0.18" }
base64 = { version = "0.22" }
chrono = { version = "0.4" }
console_error_panic_hook = { version = "0.1" }
db = { path = "crates/db" }
http = { version = "1.4" }
leptos = { version = "0.8.0", features = ["nightly"] }
leptos_axum = { version = "0.8.0" }
leptos_i18n = { version = "0.6" }
leptos_i18n_build = { version = "0.6", package = "leptos_i18n_build" }
leptos_i18n_router = { version = "0.6", package = "leptos_i18n_router" }
leptos_meta = { version = "0.8.0" }
leptos_router = { version = "0.8.0", features = ["nightly"] }
password-auth = { version = "1" }
rand = { version = "0.8" }
sea-orm = { version = "2.0.0-rc", default-features = false }
sea-orm-migration = { version = "2.0.0-rc.37" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6" }
serde_json = { version = "1.0" }
subtle = { version = "2.6" }
thiserror = { version = "2" }
tokio = { version = "1" }
tower-cookies = { version = "0.11" }
tower-http = { version = "0.6" }
tower-sessions = { version = "0.14" }
tower_governor = { version = "0.8" }
url = { version = "2" }
uuid = { version = "1" }
wasm-bindgen = { version = "=0.2.114" }
wasm-bindgen-futures = { version = "0.4" }
webauthn-rs = { version = "0.5.4" }
webauthn-rs-proto = { version = "0.5.4", default-features = false }
web-sys = { version = "0.3.85" }

# Keep the wasm release profile at workspace root.
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# cargo-leptos workspace config
[[workspace.metadata.leptos]]
name = "leptos-auth-template-community"
bin-package = "leptos-auth-template-community"
lib-package = "leptos-auth-template-community"
bin-target = "leptos-auth-template-community"
output-name = "leptos-auth-template-community"

site-root = "target/site"
site-pkg-dir = "pkg"

# Paths are relative to workspace root
style-file = "crates/app/style/main.scss"
assets-dir = "crates/app/public"

site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "crates/app/end2end"

browserquery = "defaults"
env = "DEV"

bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false

lib-profile-release = "wasm-release"
