[package]
name = "leptos-auth-template-community"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
axum = { workspace = true, optional = true }
axum-login = { workspace = true, optional = true } # for axum-login
tower-sessions = { workspace = true, optional = true } # for axum-login
tower-http = { workspace = true, optional = true, features = ["trace", "limit", "set-header"] }
tower_governor = { workspace = true, optional = true }
serde = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

leptos_i18n = { workspace = true }
leptos_i18n_router = { workspace = true }

rand = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true } # for axum-login
http = { workspace = true, optional = true }
tower-cookies = { workspace = true, optional = true }

web-sys = { workspace = true, optional = true, features = [
  "Window",
  "Navigator",
  "CredentialsContainer",
  "CredentialCreationOptions",
  "CredentialRequestOptions",
  "PublicKeyCredential",
  "console",
] }

password-auth = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }

sea-orm = { workspace = true, optional = true, features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono",
] }

db = { workspace = true, optional = true }

webauthn-rs = { workspace = true, optional = true, features = ["danger-allow-state-serialisation", "conditional-ui"] }
webauthn-rs-proto = { workspace = true, optional = true, features = ["wasm"] }
serde-wasm-bindgen = { workspace = true, optional = true }

url = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["v4", "serde"] }
chrono = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
leptos_i18n_build = { workspace = true }

[features]
hydrate = [
  "leptos/hydrate",
  "dep:console_error_panic_hook",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
  "dep:webauthn-rs-proto",
  "dep:serde-wasm-bindgen",

  "leptos_i18n/hydrate",
  "leptos_i18n_build/hydrate",
]

ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:leptos_axum",
  "axum/macros",
  "dep:axum-login",
  "dep:tower-sessions",
  "dep:tower-http",
  "dep:tower_governor",

  "dep:thiserror",
  "dep:http",
  "dep:tower-cookies",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_i18n/axum",
  "leptos_i18n_build/ssr",
  "dep:password-auth",
  "dep:rand",
  "dep:base64",
  "dep:subtle",
  "dep:sea-orm",
  "dep:db",
  "dep:webauthn-rs",
  "dep:webauthn-rs-proto",
  "dep:url",
  "dep:uuid",
  "dep:chrono",
  "dep:serde_json",
]
